# djangocon-2025-mutable-event-sourcing

./: .gitignore  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
src/eventsourcing/: aggregate_repository.py  aggregates.py  apps.py  domain_events.py  models.py  notification_bus.py  notifications.py  projections.py  singleton.py
src/eventsourcing/management/commands/: rebuild_aggregates.py
src/framework/: asgi.py  settings.py  urls.py  wsgi.py
src/lib/: iter.py
src/lib/db/iterators/: __init__.py  cursor.py
src/winemaking/: apps.py  types.py
src/winemaking/events/: action.py  wine_lot.py
src/winemaking/migrations/: 0001_initial.py
src/winemaking/models/: __init__.py  action.py  wine_lot.py
src/winemaking/tests/: test_action_aggregate.py  test_blend_lots.py  test_bottle_volume.py  test_calculate_composition.py  test_receive_volume.py  test_remeasure_lot.py  test_wine_lot_aggregate.py
src/winemaking/use_cases/: blend_lots.py  bottle_volume.py  calculate_composition.py  receive_volume.py  remeasure_lot.py
